fixed overflowing checkbox labels

--- a/app/assets/stylesheets/components/checkboxes/_checkboxes.scss
+++ b/app/assets/stylesheets/components/checkboxes/_checkboxes.scss
@@ -69,5 +69,6 @@
 .ccs-checkboxes--scrollable {
     max-height: govuk-px-to-rem(394);
     min-height: govuk-px-to-rem(234);
+    width: 224px;
     overflow: auto;
 }
